[package]
name = "musl-test"
version = "0.8.0"
authors = ["Andrew Dorton <adorton@adobe.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-rustls = "^0.14.0"
config = "0.10"
serde = { version = "^1.0.8", features = ["derive"] }
structopt = "0.3"
eyre = "0.6"
rustls = "0.18"
futures = "0.3"
futures-util = "^0.3.1"
log = "0.4"
fern = "0.6"
chrono = "0.4"
ctrlc = "3.1"
